--- a/wwwroot/css/site - Cópia (3).css
+++ b/wwwroot/css/site - Cópia (3).css
@@ -1,28 +1,11 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-    margin-bottom: 60px;
-    background-color: #fff;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #023047
 }
-
-
-
-
-
-
 
 .page {
     display: flex;
@@ -32,7 +15,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-color: #6d4c4c;
+    background-color: #480ca8;
 }
 
 .formLogin {
@@ -46,19 +29,19 @@ body {
 }
 
 .areaLogin img {
-    width: 620px;
+    width: 420px;
 }
 
 .formLogin h1 {
     padding: 0;
     margin: 0;
     font-weight: 500;
-    font-size: 2.9em;
+    font-size: 2.3em;
 }
 
 .formLogin p {
     display: inline-block;
-    font-size: 17px;
+    font-size: 14px;
     color: #666;
     margin-bottom: 25px;
 }
@@ -72,15 +55,14 @@ body {
     border-radius: 4px;
     transition: all linear 160ms;
     outline: none;
-    width: 100%;
 }
 
 
-.form-group input:focus {
-    border: 1px solid #f72585;
-}
+    .formLogin input:focus {
+        border: 1px solid #f72585;
+    }
 
-.form-group label {
+.formLogin label {
     font-size: 14px;
     font-weight: 600;
 }
@@ -98,54 +80,17 @@ body {
     }
 
 .btn {
-    background-color: red;
-    color: black;
+    background-color: #f72585;
+    color: #fff;
     font-size: 14px;
     font-weight: 600;
     border: none !important;
     transition: all linear 160ms;
     cursor: pointer;
     margin: 0 !important;
-    width: 100%;
 }
 
     .btn:hover {
         transform: scale(1.05);
-        background-color: black;
-        color: #fff;
+        background-color: #ff0676;
     }
-
-h1 {
-    text-align: center;
-    align-items: center;
-}
-
-p {
-    text-align: center;
-    align-items: center;
-}
-
-.btn-editar {
-    background-color: yellow;
-    width: 22px;
-    height: 5px;
-    color: black;
-    text-decoration: none;
-}
-
-.btn-detalhes {
-    background-color: green;
-    width: 22px;
-    height: 5px;
-    color: black;
-    text-decoration: none;
-}
-
-.btn-delete {
-    background-color: red;
-    width: 22px;
-    height: 5px;
-    color: black;
-    text-decoration: none;
-}
-
