Tela da home estilizada

--- a/Views/Cidade/Index.cshtml
+++ b/Views/Cidade/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Cadastro de Cidade</h1>
 
-<p>
+<p class ="btn-primeiro">
     <a asp-action="Create">Cadastrar</a>
 </p>
 <table class="table">
