--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-color: #6d4c4c;
+    background-color: #3e5198;
 }
 
 .formLogin {
