Alterações na tela create

--- a/Views/Cidade/Create.cshtml
+++ b/Views/Cidade/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Cadastrando Cidade</h1>
 
-<h4>Cidade</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,8 +27,8 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar para lista</a>
+<div class="return">
+    <a asp-action="Index" class="title-return">Voltar para lista</a>
 </div>
 
 @section Scripts {
