--- a/Views/Cliente/Create.cshtml
+++ b/Views/Cliente/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Cadastrando Cliente</h1>
 
-<h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,8 +57,8 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar para lista</a>
+<div class="return">
+    <a asp-action="Index" class="title-return">Voltar para lista</a>
 </div>
 
 @section Scripts {
