--- a/Views/EntradaProduto/Create.cshtml
+++ b/Views/EntradaProduto/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Cadastrando Entrada de Produto</h1>
 
-<h4>Entrada de Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,8 +32,8 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar para lista</a>
+<div class="return">
+    <a asp-action="Index" class="title-return">Voltar para lista</a>
 </div>
 
 @section Scripts {
