--- a/Views/Cidade/Edit.cshtml
+++ b/Views/Cidade/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editando a cidade</h1>
 
-<h4>Cidade</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,7 +24,7 @@
                 <span asp-validation-for="EstadoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
