--- a/Views/Cidade/Index.cshtml
+++ b/Views/Cidade/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Cadastro de Cidade</h1>
 
 <p class ="btn-primeiro">
-    <a asp-action="Create">Cadastrar</a>
+    <a asp-action="Create" class="title-btn">Cadastrar</a>
 </p>
 <table class="table">
     <thead>
