--- a/Views/Estado/Delete.cshtml
+++ b/Views/Estado/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Deletar</h1>
+<h1>Deletar estado</h1>
 
 <h3>Você tem certeza que deseja deletar isso?</h3>
-<div>
-    <h4>Estado</h4>
+<div class="container-delete">
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
