--- a/Views/Fornecedor/Index.cshtml
+++ b/Views/Fornecedor/Index.cshtml
@@ -6,8 +6,8 @@
 
 <h1>Cadastro de Fornecedor</h1>
 
-<p>
-    <a asp-action="Create">Cadastrar</a>
+<p class="btn-primeiro">
+    <a asp-action="Create" class="title-btn">Cadastrar</a>
 </p>
 <table class="table">
     <thead>
